--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods-not-run.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods-not-run.html
@@ -1,8 +1,16 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_11</td></tr>
+<tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_10</td></tr>
+<tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_09</td></tr>
 <tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_05</td></tr>
+<tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_12</td></tr>
 <tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_01</td></tr>
+<tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_08</td></tr>
+<tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_07</td></tr>
 <tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_06</td></tr>
 <tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_04</td></tr>
+<tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_15</td></tr>
 <tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_03</td></tr>
 <tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_02</td></tr>
+<tr><td>TestCases.WFA_POTS_Dial_Tone_1.DT_13</td></tr>
 </table>
