--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/classes.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/classes.html
@@ -4,70 +4,50 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestCases.WFA_POTS_Dial_Tone_1</td>
+<td>TestCases.WFA_Set_Basic24_Commit_Personalization</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_11</td>
+<td>Basic24_30</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_10</td>
+<td>Basic24_31</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_06</td>
+<td>Basic24_32</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_05</td>
+<td>Basic24_33</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_08</td>
+<td>Basic24_27</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_07</td>
+<td>Basic24_28</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_02</td>
+<td>Basic24_29</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_13</td>
+<td>Basic24_34</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_12</td>
+<td>Basic24_25</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DT_01</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>DT_04</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>DT_15</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>DT_03</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>DT_14</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>DT_09</td>
+<td>Basic24_26</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
