--- a/yulei_Java_demo/com.webntel/test-output/emailable-report.html
+++ b/yulei_Java_demo/com.webntel/test-output/emailable-report.html
@@ -9,15 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Batch_1</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">72,293</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">58,981</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Batch_1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestCases.WFA_POTS_Dial_Tone_1</td><td><a href="#m0">DT_14</a></td><td rowspan="1">1649750679992</td><td rowspan="1">46304</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Batch_1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestCases.WFA_Set_Basic24_Commit_Personalization</td><td><a href="#m0">Basic24_34</a></td><td rowspan="1">1653628425569</td><td rowspan="1">11</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TestCases.WFA_POTS_Dial_Tone_1#DT_14</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	@@line_start [1053] line_end; expected [JT0015] but found [JT0005]gui_start  gui_end
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:47)
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:31)
-	at TestCases.WFA_POTS_Dial_Tone_1.DT_14(WFA_POTS_Dial_Tone_1.java:1134)
+<h2>Default test</h2><h3 id="m0">TestCases.WFA_Set_Basic24_Commit_Personalization#Basic24_34</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Error: Unresolved compilation problem: 
+	ExpCurrentCommit cannot be resolved to a variable
+
+	at TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_34(WFA_Set_Basic24_Commit_Personalization.java:1321)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
