--- a/yulei_Java_demo/com.webntel/test-output/index.html
+++ b/yulei_Java_demo/com.webntel/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Batch_1">
-                    <span>C:\Users\yulei\AppData\Local\Temp\testng-eclipse-129607937\testng-customsuite.xml</span>
+                    <span>C:\Users\yulei\AppData\Local\Temp\testng-eclipse--57670034\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Batch_1">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Batch_1" title="TestCases.WFA_POTS_Dial_Tone_1" hash-for-method="DT_14">DT_14</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Batch_1" title="TestCases.WFA_Set_Basic24_Commit_Personalization" hash-for-method="Basic24_34">Basic24_34</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Batch_1 -->
@@ -122,19 +122,18 @@
           <div class="suite-Batch_1-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">TestCases.WFA_POTS_Dial_Tone_1</span>
+              <span class="class-name">TestCases.WFA_Set_Basic24_Commit_Personalization</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="DT_14">
-                  </a> <!-- DT_14 -->
-                  <span class="method-name">DT_14</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	@@line_start [1053] line_end; expected [JT0015] but found [JT0005]gui_start  gui_end
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:47)
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:31)
-	at TestCases.WFA_POTS_Dial_Tone_1.DT_14(WFA_POTS_Dial_Tone_1.java:1134)
+                  <a name="Basic24_34">
+                  </a> <!-- Basic24_34 -->
+                  <span class="method-name">Basic24_34</span>
+                  <div class="stack-trace">java.lang.Error: Unresolved compilation problem: 
+	ExpCurrentCommit cannot be resolved to a variable
+
+	at TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_34(WFA_Set_Basic24_Commit_Personalization.java:1321)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -159,7 +158,7 @@
         </div> <!-- panel Batch_1 -->
         <div panel-name="test-xml-Batch_1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\yulei\AppData\Local\Temp\testng-eclipse-129607937\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\yulei\AppData\Local\Temp\testng-eclipse--57670034\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,11 +167,11 @@
 &lt;suite thread-count=&quot;1&quot; configfailurepolicy=&quot;continue&quot; guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Batch_1&quot; parallel=&quot;classes&quot;&gt;
   &lt;test thread-count=&quot;1&quot; verbose=&quot;2&quot; name=&quot;Default test&quot; parallel=&quot;classes&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestCases.WFA_POTS_Dial_Tone_1&quot;&gt;
+      &lt;class name=&quot;TestCases.WFA_Set_Basic24_Commit_Personalization&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;DT_14&quot;/&gt;
+          &lt;include name=&quot;Basic24_34&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- TestCases.WFA_POTS_Dial_Tone_1 --&gt;
+      &lt;/class&gt; &lt;!-- TestCases.WFA_Set_Basic24_Commit_Personalization --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Batch_1 --&gt;
@@ -214,14 +213,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'DT_14')
-data.setCell(0, 2, 'TestCases.WFA_POTS_Dial_Tone_1')
-data.setCell(0, 3, 46304);
+data.setCell(0, 1, 'Basic24_34')
+data.setCell(0, 2, 'TestCases.WFA_Set_Basic24_Commit_Personalization')
+data.setCell(0, 3, 11);
 window.suiteTableData['Batch_1']= { tableData: data, tableDiv: 'times-div-Batch_1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 46 seconds</span>
+              <span class="suite-total-time">Total running time: 11 ms</span>
               <div id="times-div-Batch_1">
               </div> <!-- times-div-Batch_1 -->
             </div> <!-- times-div -->
@@ -236,39 +235,29 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Batch_1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">14 ignored methods</span>
+            <span class="header-content">9 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">TestCases.WFA_POTS_Dial_Tone_1</span>
+              <span class="ignored-class-name">TestCases.WFA_Set_Basic24_Commit_Personalization</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">DT_11</span>
+                <span class="ignored-method-name">Basic24_28</span>
                 <br/>
-                <span class="ignored-method-name">DT_10</span>
+                <span class="ignored-method-name">Basic24_27</span>
                 <br/>
-                <span class="ignored-method-name">DT_09</span>
+                <span class="ignored-method-name">Basic24_29</span>
                 <br/>
-                <span class="ignored-method-name">DT_05</span>
+                <span class="ignored-method-name">Basic24_26</span>
                 <br/>
-                <span class="ignored-method-name">DT_12</span>
+                <span class="ignored-method-name">Basic24_31</span>
                 <br/>
-                <span class="ignored-method-name">DT_01</span>
+                <span class="ignored-method-name">Basic24_25</span>
                 <br/>
-                <span class="ignored-method-name">DT_08</span>
+                <span class="ignored-method-name">Basic24_33</span>
                 <br/>
-                <span class="ignored-method-name">DT_07</span>
+                <span class="ignored-method-name">Basic24_30</span>
                 <br/>
-                <span class="ignored-method-name">DT_06</span>
-                <br/>
-                <span class="ignored-method-name">DT_04</span>
-                <br/>
-                <span class="ignored-method-name">DT_15</span>
-                <br/>
-                <span class="ignored-method-name">DT_03</span>
-                <br/>
-                <span class="ignored-method-name">DT_02</span>
-                <br/>
-                <span class="ignored-method-name">DT_13</span>
+                <span class="ignored-method-name">Basic24_32</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -280,28 +269,28 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.WFA_POTS_Dial_Tone_1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestCases.WFA_Set_Basic24_Commit_Personalization</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">19127 ms</span>
+                <span class="method-start">45476 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">DT_14</span>
-                <span class="method-start">25925 ms</span>
+                <span class="method-name">Basic24_34</span>
+                <span class="method-start">52367 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">72236 ms</span>
+                <span class="method-start">52428 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">AfterClass</span>
-                <span class="method-start">72247 ms</span>
+                <span class="method-start">58955 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
