add check table point

--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/classes.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/classes.html
@@ -4,50 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestCases.WFA_Set_Basic24_Commit_Personalization</td>
+<td>TestCases.GUIs</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Basic24_30</td>
+<td>GUI_03_RUD_SW</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Basic24_31</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Basic24_32</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Basic24_33</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Basic24_27</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Basic24_28</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Basic24_29</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Basic24_34</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Basic24_25</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Basic24_26</td>
+<td>GUI_04_RUD_W</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
