--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods-not-run.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods-not-run.html
@@ -1,11 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_28</td></tr>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_27</td></tr>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_29</td></tr>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_26</td></tr>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_31</td></tr>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_25</td></tr>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_33</td></tr>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_30</td></tr>
-<tr><td>TestCases.WFA_Set_Basic24_Commit_Personalization.Basic24_32</td></tr>
+<tr><td>TestCases.GUIs.GUI_03_RUD_SW</td></tr>
 </table>
