--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Batch_1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="73819a">  <td>22/05/27 01:13:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WFA_Set_Basic24_Commit_Personalization.afterMethod()[pri:0, instance:TestCases.WFA_Set_Basic24_Commit_Personalization@1990a65e]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Default test-1@2110385742</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/27 01:13:38</td>   <td>-6953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WFA_Set_Basic24_Commit_Personalization.beforeMethod()[pri:0, instance:TestCases.WFA_Set_Basic24_Commit_Personalization@1990a65e]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Default test-1@2110385742</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/27 01:13:52</td>   <td>6527</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WFA_Set_Basic24_Commit_Personalization.AfterClass()[pri:0, instance:TestCases.WFA_Set_Basic24_Commit_Personalization@1990a65e]">&lt;&lt;AfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@2110385742</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/27 01:13:45</td>   <td>-63</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WFA_Set_Basic24_Commit_Personalization.Basic24_34()[pri:0, instance:TestCases.WFA_Set_Basic24_Commit_Personalization@1990a65e]">Basic24_34</td> 
-  <td>TestNG-test=Default test-1@2110385742</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/27 01:12:53</td>   <td>-52422</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WFA_Set_Basic24_Commit_Personalization.beforeClass()[pri:0, instance:TestCases.WFA_Set_Basic24_Commit_Personalization@1990a65e]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@2110385742</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/06/23 23:26:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GUIs.beforeClass()[pri:0, instance:TestCases.GUIs@42607a4f]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/06/23 23:26:49</td>   <td>24844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GUIs.beforeMethod()[pri:0, instance:TestCases.GUIs@42607a4f]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/06/23 23:27:17</td>   <td>52128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GUIs.afterMethod()[pri:0, instance:TestCases.GUIs@42607a4f]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/06/23 23:27:17</td>   <td>52130</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GUIs.AfterClass()[pri:0, instance:TestCases.GUIs@42607a4f]">&lt;&lt;AfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/06/23 23:26:56</td>   <td>31561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GUIs.GUI_04_RUD_W()[pri:0, instance:TestCases.GUIs@42607a4f]">GUI_04_RUD_W</td> 
+  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
 </table>
