add Guis scripts

--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/classes.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/classes.html
@@ -11,7 +11,35 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>GUI_29_Queue_viewl_and_journal_TZ_display_not_match</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>GUI_10_Bill_Record_W</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>GUI_45_City_and_State_in_Middle_Section_MW</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>GUI_03_RUD_SW</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>GUI_36_BILL_inforamtion_not_back_again</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>GUI_16_Service_Summary_Area</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>GUI_34_bim_info_in_Bill_MW</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
