--- a/yulei_Java_demo/com.webntel/test-output/index.html
+++ b/yulei_Java_demo/com.webntel/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button class="button" id="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Batch_1">
-              <span class="suite-name border-passed">Batch_1</span>
+              <span class="suite-name border-failed">Batch_1</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Batch_1">
-                    <span>C:\Users\yulei\AppData\Local\Temp\testng-eclipse--1703317876\testng-customsuite.xml</span>
+                    <span>C:\Users\yulei\AppData\Local\Temp\testng-eclipse-1073096411\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,21 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Batch_1" class="hide-methods passed suite-Batch_1"> (hide)</a> <!-- hide-methods passed suite-Batch_1 -->
-                      <a href="#" panel-name="suite-Batch_1" class="show-methods passed suite-Batch_1"> (show)</a> <!-- show-methods passed suite-Batch_1 -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Batch_1" class="hide-methods failed suite-Batch_1"> (hide)</a> <!-- hide-methods failed suite-Batch_1 -->
+                      <a href="#" panel-name="suite-Batch_1" class="show-methods failed suite-Batch_1"> (show)</a> <!-- show-methods failed suite-Batch_1 -->
                     </span>
-                    <div class="method-list-content passed suite-Batch_1">
+                    <div class="method-list-content failed suite-Batch_1">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Batch_1" title="TestCases.GUIs" hash-for-method="GUI_04_RUD_W">GUI_04_RUD_W</a> <!-- method navigator-link -->
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Batch_1" title="TestCases.GUIs" hash-for-method="EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW">EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Batch_1 -->
+                    </div> <!-- method-list-content failed suite-Batch_1 -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -119,25 +119,47 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Batch_1" class="panel Batch_1">
-          <div class="suite-Batch_1-class-passed">
+          <div class="suite-Batch_1-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">TestCases.GUIs</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="GUI_04_RUD_W">
-                  </a> <!-- GUI_04_RUD_W -->
-                  <span class="method-name">GUI_04_RUD_W</span>
+                  <a name="EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW">
+                  </a> <!-- EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW -->
+                  <span class="method-name">EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW</span>
+                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
+	@@line_start [509] line_end; expected [07-09-22  0818P] but found [07-09-22 0818P]gui_start  gui_end
+	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:47)
+	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:31)
+	at TestCases.GUIs.EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW(GUIs.java:647)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
+	at java.lang.Thread.run(Thread.java:748)
+
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Batch_1-class-passed -->
+          </div> <!-- suite-Batch_1-class-failed -->
         </div> <!-- panel Batch_1 -->
         <div panel-name="test-xml-Batch_1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\yulei\AppData\Local\Temp\testng-eclipse--1703317876\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\yulei\AppData\Local\Temp\testng-eclipse-1073096411\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +170,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;TestCases.GUIs&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;GUI_04_RUD_W&quot;/&gt;
+          &lt;include name=&quot;EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- TestCases.GUIs --&gt;
     &lt;/classes&gt;
@@ -192,14 +214,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'GUI_04_RUD_W')
+data.setCell(0, 1, 'EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW')
 data.setCell(0, 2, 'TestCases.GUIs')
-data.setCell(0, 3, 20559);
+data.setCell(0, 3, 128038);
 window.suiteTableData['Batch_1']= { tableData: data, tableDiv: 'times-div-Batch_1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Batch_1">
               </div> <!-- times-div-Batch_1 -->
             </div> <!-- times-div -->
@@ -214,13 +236,27 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Batch_1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">8 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">TestCases.GUIs</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">GUI_29_Queue_viewl_and_journal_TZ_display_not_match</span>
+                <br/>
+                <span class="ignored-method-name">GUI_10_Bill_Record_W</span>
+                <br/>
                 <span class="ignored-method-name">GUI_03_RUD_SW</span>
+                <br/>
+                <span class="ignored-method-name">GUI_16_Service_Summary_Area</span>
+                <br/>
+                <span class="ignored-method-name">GUI_34_bim_info_in_Bill_MW</span>
+                <br/>
+                <span class="ignored-method-name">GUI_04_RUD_W</span>
+                <br/>
+                <span class="ignored-method-name">GUI_36_BILL_inforamtion_not_back_again</span>
+                <br/>
+                <span class="ignored-method-name">GUI_45_City_and_State_in_Middle_Section_MW</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -239,19 +275,21 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">24851 ms</span>
+                <span class="method-start">22105 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">GUI_04_RUD_W</span>
-                <span class="method-start">31569 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW</span>
+                <span class="method-start">28787 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">52135 ms</span>
+                <span class="method-start">156837 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">AfterClass</span>
-                <span class="method-start">52137 ms</span>
+                <span class="method-start">156841 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
