--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods-not-run.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods-not-run.html
@@ -1,3 +1,10 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>TestCases.GUIs.GUI_29_Queue_viewl_and_journal_TZ_display_not_match</td></tr>
+<tr><td>TestCases.GUIs.GUI_10_Bill_Record_W</td></tr>
 <tr><td>TestCases.GUIs.GUI_03_RUD_SW</td></tr>
+<tr><td>TestCases.GUIs.GUI_16_Service_Summary_Area</td></tr>
+<tr><td>TestCases.GUIs.GUI_34_bim_info_in_Bill_MW</td></tr>
+<tr><td>TestCases.GUIs.GUI_04_RUD_W</td></tr>
+<tr><td>TestCases.GUIs.GUI_36_BILL_inforamtion_not_back_again</td></tr>
+<tr><td>TestCases.GUIs.GUI_45_City_and_State_in_Middle_Section_MW</td></tr>
 </table>
