--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Batch_1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="73819a">  <td>22/06/23 23:26:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GUIs.beforeClass()[pri:0, instance:TestCases.GUIs@42607a4f]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/06/23 23:26:49</td>   <td>24844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GUIs.beforeMethod()[pri:0, instance:TestCases.GUIs@42607a4f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/06/23 23:27:17</td>   <td>52128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GUIs.afterMethod()[pri:0, instance:TestCases.GUIs@42607a4f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/06/23 23:27:17</td>   <td>52130</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GUIs.AfterClass()[pri:0, instance:TestCases.GUIs@42607a4f]">&lt;&lt;AfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/06/23 23:26:56</td>   <td>31561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GUIs.GUI_04_RUD_W()[pri:0, instance:TestCases.GUIs@42607a4f]">GUI_04_RUD_W</td> 
-  <td>TestNG-test=Default test-1@518790287</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/07/05 01:28:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GUIs.beforeMethod()[pri:0, instance:TestCases.GUIs@1990a65e]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Default test-1@1420826378</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/07/05 01:28:07</td>   <td>-22099</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GUIs.beforeClass()[pri:0, instance:TestCases.GUIs@1990a65e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@1420826378</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/07/05 01:30:44</td>   <td>134732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GUIs.afterMethod()[pri:0, instance:TestCases.GUIs@1990a65e]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Default test-1@1420826378</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/07/05 01:30:44</td>   <td>134735</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GUIs.AfterClass()[pri:0, instance:TestCases.GUIs@1990a65e]">&lt;&lt;AfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@1420826378</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/07/05 01:28:36</td>   <td>6681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GUIs.EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW()[pri:0, instance:TestCases.GUIs@1990a65e]">EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW</td> 
+  <td>TestNG-test=Default test-1@1420826378</td>   <td></td> </tr>
 </table>
