--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/classes.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/classes.html
@@ -4,46 +4,42 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestCases.GUIs</td>
+<td>TestCases.WFA_LSMS_LNP_1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>GUI_29_Queue_viewl_and_journal_TZ_display_not_match</td>
+<td>LSMS_LNP_005_No_NPANXX_Found_CLEC_Referral_Found_Not_agree</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>EMS_084_CATS_ProcessD_NoProcess_Approved_UncheckBackdown_SW</td>
+<td>LSMS_LNP_003_NPANXX_Found_Customer_does_not_agree_W</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>GUI_10_Bill_Record_W</td>
+<td>LSMS_LNP_008_Pooled_account_SNET</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>GUI_45_City_and_State_in_Middle_Section_MW</td>
+<td>LSMS_LNP_007_No_NPANXX_Found_No_CLEC_Referral_Found_Not_agree</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>GUI_03_RUD_SW</td>
+<td>LSMS_LNP_001_LRN_NPANXX_SNET</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>GUI_36_BILL_inforamtion_not_back_again</td>
+<td>LSMS_LNP_006_No_NPANXX_Found_CLEC_Referral_Found_Not_agree</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>GUI_16_Service_Summary_Area</td>
+<td>LSMS_LNP_002_LRN_CUSTOMER_AGREES_W</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>GUI_34_bim_info_in_Bill_MW</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>GUI_04_RUD_W</td>
+<td>LSMS_LNP_004_No_NPANXX_Found_CLEC_Referral_Found_Agree</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
