--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods-not-run.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods-not-run.html
@@ -1,10 +1,9 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>TestCases.GUIs.GUI_29_Queue_viewl_and_journal_TZ_display_not_match</td></tr>
-<tr><td>TestCases.GUIs.GUI_10_Bill_Record_W</td></tr>
-<tr><td>TestCases.GUIs.GUI_03_RUD_SW</td></tr>
-<tr><td>TestCases.GUIs.GUI_16_Service_Summary_Area</td></tr>
-<tr><td>TestCases.GUIs.GUI_34_bim_info_in_Bill_MW</td></tr>
-<tr><td>TestCases.GUIs.GUI_04_RUD_W</td></tr>
-<tr><td>TestCases.GUIs.GUI_36_BILL_inforamtion_not_back_again</td></tr>
-<tr><td>TestCases.GUIs.GUI_45_City_and_State_in_Middle_Section_MW</td></tr>
+<tr><td>TestCases.WFA_LSMS_LNP_1.LSMS_LNP_004_No_NPANXX_Found_CLEC_Referral_Found_Agree</td></tr>
+<tr><td>TestCases.WFA_LSMS_LNP_1.LSMS_LNP_003_NPANXX_Found_Customer_does_not_agree_W</td></tr>
+<tr><td>TestCases.WFA_LSMS_LNP_1.LSMS_LNP_005_No_NPANXX_Found_CLEC_Referral_Found_Not_agree</td></tr>
+<tr><td>TestCases.WFA_LSMS_LNP_1.LSMS_LNP_001_LRN_NPANXX_SNET</td></tr>
+<tr><td>TestCases.WFA_LSMS_LNP_1.LSMS_LNP_007_No_NPANXX_Found_No_CLEC_Referral_Found_Not_agree</td></tr>
+<tr><td>TestCases.WFA_LSMS_LNP_1.LSMS_LNP_006_No_NPANXX_Found_CLEC_Referral_Found_Not_agree</td></tr>
+<tr><td>TestCases.WFA_LSMS_LNP_1.LSMS_LNP_002_LRN_CUSTOMER_AGREES_W</td></tr>
 </table>
