--- a/yulei_Java_demo/com.webntel/test-output/index.html
+++ b/yulei_Java_demo/com.webntel/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button class="button" id="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Batch_1">
-              <span class="suite-name border-failed">Batch_1</span>
+              <span class="suite-name border-passed">Batch_1</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Batch_1">
-                    <span>C:\Users\yulei\AppData\Local\Temp\testng-eclipse--895357146\testng-customsuite.xml</span>
+                    <span>C:\Users\yulei\AppData\Local\Temp\testng-eclipse--144568838\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,21 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Batch_1" class="hide-methods failed suite-Batch_1"> (hide)</a> <!-- hide-methods failed suite-Batch_1 -->
-                      <a href="#" panel-name="suite-Batch_1" class="show-methods failed suite-Batch_1"> (show)</a> <!-- show-methods failed suite-Batch_1 -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Batch_1" class="hide-methods passed suite-Batch_1"> (hide)</a> <!-- hide-methods passed suite-Batch_1 -->
+                      <a href="#" panel-name="suite-Batch_1" class="show-methods passed suite-Batch_1"> (show)</a> <!-- show-methods passed suite-Batch_1 -->
                     </span>
-                    <div class="method-list-content failed suite-Batch_1">
+                    <div class="method-list-content passed suite-Batch_1">
                       <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Batch_1" title="TestCases.WFA_LSMS_LNP_1" hash-for-method="LSMS_LNP_008_Pooled_account_SNET">LSMS_LNP_008_Pooled_account_SNET</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Batch_1" title="TestCases.WFA_LSMS_LNP_1" hash-for-method="LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW">LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Batch_1 -->
+                    </div> <!-- method-list-content passed suite-Batch_1 -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -119,48 +119,25 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Batch_1" class="panel Batch_1">
-          <div class="suite-Batch_1-class-failed">
+          <div class="suite-Batch_1-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">TestCases.WFA_LSMS_LNP_1</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LSMS_LNP_008_Pooled_account_SNET">
-                  </a> <!-- LSMS_LNP_008_Pooled_account_SNET -->
-                  <span class="method-name">LSMS_LNP_008_Pooled_account_SNET</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	@@line_start [364] line_end; expected [This is a pooled account. Do not discuss Pooled status with the customer.] but found [This is a pooled account. Do not discussPooled status with the customer.]gui_start  gui_end,
-	@@line_start [374] line_end; expected [CUSTOMER DOES NOT AGREE] but found [The Tree no display!]gui_start  gui_end
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:47)
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:31)
-	at TestCases.WFA_LSMS_LNP_1.LSMS_LNP_008_Pooled_account_SNET(WFA_LSMS_LNP_1.java:390)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-
-</div> <!-- stack-trace -->
+                  <a name="LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW">
+                  </a> <!-- LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW -->
+                  <span class="method-name">LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Batch_1-class-failed -->
+          </div> <!-- suite-Batch_1-class-passed -->
         </div> <!-- panel Batch_1 -->
         <div panel-name="test-xml-Batch_1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\yulei\AppData\Local\Temp\testng-eclipse--895357146\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\yulei\AppData\Local\Temp\testng-eclipse--144568838\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -171,7 +148,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;TestCases.WFA_LSMS_LNP_1&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;LSMS_LNP_008_Pooled_account_SNET&quot;/&gt;
+          &lt;include name=&quot;LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- TestCases.WFA_LSMS_LNP_1 --&gt;
     &lt;/classes&gt;
@@ -215,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LSMS_LNP_008_Pooled_account_SNET')
+data.setCell(0, 1, 'LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW')
 data.setCell(0, 2, 'TestCases.WFA_LSMS_LNP_1')
-data.setCell(0, 3, 29829);
+data.setCell(0, 3, 19344);
 window.suiteTableData['Batch_1']= { tableData: data, tableDiv: 'times-div-Batch_1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Batch_1">
               </div> <!-- times-div-Batch_1 -->
             </div> <!-- times-div -->
@@ -237,25 +214,47 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Batch_1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">7 ignored methods</span>
+            <span class="header-content">18 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">TestCases.WFA_LSMS_LNP_1</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">LSMS_LNP_017_RX_Screen_Agree_Billing_data_W</span>
+                <br/>
+                <span class="ignored-method-name">LSMS_LNP_009_No_SO_and_Billing_return_Pstat_present_W</span>
+                <br/>
+                <span class="ignored-method-name">LSMS_LNP_010_No_SO_and_No_Billing_W</span>
+                <br/>
+                <span class="ignored-method-name">LSMS_LNP_018_No_MR_report_RX_Screen_SO_Billing_ZBU</span>
+                <br/>
+                <span class="ignored-method-name">LSMS_LNP_013_RX_Screen_Not_valid_SPID_State_California_Agree_W</span>
+                <br/>
                 <span class="ignored-method-name">LSMS_LNP_004_No_NPANXX_Found_CLEC_Referral_Found_Agree</span>
+                <br/>
+                <span class="ignored-method-name">LSMS_LNP_012_WINDBACK_DIFF_CO_account_SNET</span>
                 <br/>
                 <span class="ignored-method-name">LSMS_LNP_003_NPANXX_Found_Customer_does_not_agree_W</span>
                 <br/>
+                <span class="ignored-method-name">LSMS_LNP_016_RX_Screen_Do_not_agree_Billing_data_MW</span>
+                <br/>
                 <span class="ignored-method-name">LSMS_LNP_005_No_NPANXX_Found_CLEC_Referral_Found_Not_agree</span>
+                <br/>
+                <span class="ignored-method-name">LSMS_LNP_008_Pooled_account_SNET</span>
                 <br/>
                 <span class="ignored-method-name">LSMS_LNP_001_LRN_NPANXX_SNET</span>
                 <br/>
                 <span class="ignored-method-name">LSMS_LNP_007_No_NPANXX_Found_No_CLEC_Referral_Found_Not_agree</span>
                 <br/>
+                <span class="ignored-method-name">LSMS_LNP_019_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW</span>
+                <br/>
                 <span class="ignored-method-name">LSMS_LNP_006_No_NPANXX_Found_CLEC_Referral_Found_Not_agree</span>
                 <br/>
+                <span class="ignored-method-name">LSMS_LNP_011_WINBACK_account_SNET</span>
+                <br/>
                 <span class="ignored-method-name">LSMS_LNP_002_LRN_CUSTOMER_AGREES_W</span>
+                <br/>
+                <span class="ignored-method-name">LSMS_LNP_014_RX_Screen_Not_valid_SPID_Local_Service_Provider_MW</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -274,21 +273,19 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">50462 ms</span>
+                <span class="method-start">19518 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">LSMS_LNP_008_Pooled_account_SNET</span>
-                <span class="method-start">57294 ms</span>
+                <span class="method-name">LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW</span>
+                <span class="method-start">26131 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">87149 ms</span>
+                <span class="method-start">45481 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">AfterClass</span>
-                <span class="method-start">87151 ms</span>
+                <span class="method-start">45484 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
