--- a/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods.html
+++ b/yulei_Java_demo/com.webntel/test-output/old/Batch_1/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Batch_1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="73819a">  <td>22/07/19 03:46:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WFA_LSMS_LNP_1.afterMethod()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@1990a65e]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Default test-1@1296299311</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/07/19 03:46:06</td>   <td>-36687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WFA_LSMS_LNP_1.beforeMethod()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@1990a65e]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Default test-1@1296299311</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/07/19 03:46:43</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WFA_LSMS_LNP_1.AfterClass()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@1990a65e]">&lt;&lt;AfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@1296299311</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/07/19 03:46:13</td>   <td>-29855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WFA_LSMS_LNP_1.LSMS_LNP_008_Pooled_account_SNET()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@1990a65e]">LSMS_LNP_008_Pooled_account_SNET</td> 
-  <td>TestNG-test=Default test-1@1296299311</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/07/19 03:45:16</td>   <td>-87142</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WFA_LSMS_LNP_1.beforeClass()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@1990a65e]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@1296299311</td>   <td></td> </tr>
+<tr bgcolor="97fd8f">  <td>22/07/29 03:02:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WFA_LSMS_LNP_1.beforeClass()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@401e7803]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@1969184074</td>   <td></td> </tr>
+<tr bgcolor="97fd8f">  <td>22/07/29 03:03:23</td>   <td>26125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WFA_LSMS_LNP_1.LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@401e7803]">LSMS_LNP_020_MR_report_RX_Screen_SO_Billing_ZBU_CS_SW</td> 
+  <td>TestNG-test=Default test-1@1969184074</td>   <td></td> </tr>
+<tr bgcolor="97fd8f">  <td>22/07/29 03:03:42</td>   <td>45478</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WFA_LSMS_LNP_1.AfterClass()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@401e7803]">&lt;&lt;AfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Default test-1@1969184074</td>   <td></td> </tr>
+<tr bgcolor="97fd8f">  <td>22/07/29 03:03:16</td>   <td>19512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WFA_LSMS_LNP_1.beforeMethod()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@401e7803]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Default test-1@1969184074</td>   <td></td> </tr>
+<tr bgcolor="97fd8f">  <td>22/07/29 03:03:42</td>   <td>45475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WFA_LSMS_LNP_1.afterMethod()[pri:0, instance:TestCases.WFA_LSMS_LNP_1@401e7803]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Default test-1@1969184074</td>   <td></td> </tr>
 </table>
